Third
以下代码再我输入sample后报错,请帮我debug

Cell In[18], line 4
    RB	3100001	PG8000001	8000001	TVC	TVC	SL65	100	2025-08-01	20250801235959	SYSTEM	20250801235959	SYSTEM	N
      	       	         	       	   	   	    	   	     ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers

代码：
def _fmt_cell(value: str, col_name: str) -> str:
    """
    把单元格文本转换为 SQL value。
    仅当列名含 'date' 或 'day' 时，才尝试把 8/14 位数字解析为日期 / 日期时间。
    """
    v = value.strip()
    if v == "" or v.upper() == "NULL":
        return "NULL"

    is_date_col = any(k in col_name.lower() for k in ("date", "day"))

    # ---------- 仅日期列做解析 ----------
    if is_date_col:
        if re.fullmatch(r"\d{8}", v):                      # YYYYMMDD
            return f"'{v[:4]}-{v[4:6]}-{v[6:]}'"
        if re.fullmatch(r"\d{14}", v):                     # YYYYMMDDhhmmss
            return f"'{v[:4]}-{v[4:6]}-{v[6:8]} {v[8:10]}:{v[10:12]}:{v[12:]}'"
        if re.fullmatch(r"\d{2}-[A-Za-z]{3}-\d{2}", v):    # 01-Oct-22
            dt = datetime.datetime.strptime(v, "%d-%b-%y")
            return f"'{dt:%Y-%m-%d}'"

    # ---------- 时间字符串 ----------
    if re.fullmatch(r"\d{1,2}:\d{2}", v):
        hh, mm = map(int, v.split(":"))
        return f"'{hh:02d}:{mm:02d}:00'"

    # ---------- 纯数字 ----------
    if re.fullmatch(r"-?\d+(\.\d+)?", v):
        return v

    # ---------- 其余按字符串处理 ----------
    return "'" + v.replace("'", "''") + "'"



    from typing import List

def generate_insert_sql(
    table_name: str,
    raw_text: str,
    extra_flag: str = "Y",
    eff_date: str = "2024-01-01",
    created_by: str = "SYSTEM",
) -> str:
    add_extra = (extra_flag.strip().upper() == "Y")
    raw_text = raw_text.strip()
    if not raw_text:
        raise ValueError("raw_text 为空，可能没有正确复制数据")

    # 拆行 + 去除前置空行
    rows: List[List[str]] = [r.split("\t") for r in raw_text.splitlines()]
    while rows and not any(c.strip() for c in rows[0]):
        rows.pop(0)
    if not rows:
        raise ValueError("未检测到列名行")

    base_cols = [c.strip() for c in rows[0]]
    data_rows = rows[1:]

    # 组装 VALUES
    values = []
    for row in data_rows:
        if not any(cell.strip() for cell in row):
            continue  # 跳过全空行
        # 补齐缺失列
        row = row + [""] * (len(base_cols) - len(row))
        fmt_row = [
            _fmt_cell(cell, col_name) for col_name, cell in zip(base_cols, row)
        ]
        if add_extra:
            fmt_row += [f"'{eff_date}'", f"'{created_by}'"]
        values.append("  (" + ", ".join(fmt_row) + ")")

    if not values:
        raise ValueError("没有可插入的数据行")

    all_cols = base_cols + (
        ["record_effective_datetime", "record_created_by"] if add_extra else []
    )
    return (
        f"INSERT INTO {table_name} ({', '.join(all_cols)}) VALUES\n"
        + ",\n".join(values)
        + ";"
    )

sample = ""scheme_cd	emplr_acct_cd	payroll_group_id	mbr_acct_cd	acct_type	sub_acct_type	fund_cd	unit_count	eff_date	record_effective_datetime	record_created_by	record_end_datetime	record_last_updated_by	delete_flag
													
													
RB	3100001	PG8000001	8000001	TVC	TVC	SL65	100	2025-08-01	20250801235959	SYSTEM	20250801235959	SYSTEM	N
													
													
RB	3100002	PG8000002	8000002	SVC	SVC	SLCA	20	2025-08-02	20250801235959	SYSTEM	20250801235959	SYSTEM	N
													
													
RB	3100003	PG8000003	8000003	PAH	FRVC	SLMIF-B	8	2025-08-01	20250801235959	SYSTEM	20250801235959	SYSTEM	N
RB	3100003	PG8000003	8000003	PAH	FRMC	CRSIF-B	15	2025-08-01	20250801235959	SYSTEM	20250801235959	SYSTEM	N
RB	3100003	PG8000003	8000003	PAH	FRMC	SLRMB-B	12	2025-08-01	20250801235959	SYSTEM	20250801235959	SYSTEM	N
RB	3100004	PG8000004	8000004	REE	ERVC	SLMIF-B	10	2025-08-01	20250801235959	SYSTEM	20250801235959	SYSTEM	N"""

print(generate_insert_sql("tb_fund_price", sample, extra_flag="N"))
